<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_spacing">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/medium_spacing">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.MaterialComponents.Body1.Label"
            android:id="@+id/beginDateLabelTextView"
            android:layout_marginTop="@dimen/medium_spacing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/begin_date"
            android:textSize="@dimen/usual_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/beginPeriodDateTextView"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/medium_spacing"
            android:background="@drawable/backdrop"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="@string/get_date_from_calendar"
            android:textSize="@dimen/usual_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/pickStartDate"
            app:layout_constraintEnd_toStartOf="@+id/pickStartDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/pickStartDate" />

        <ImageButton
            android:id="@+id/pickStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_spacing"
            android:backgroundTint="@color/widget_background_dark_color"
            android:textColor="@color/black"
            android:src="@drawable/ic_calendar"
            android:background="@color/transparent"
            android:padding="@dimen/small_spacing"
            app:iconTint="@color/black"
            android:contentDescription="@string/calendar_picker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beginDateLabelTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/endDateLabelTextView"
            style="@style/TextAppearance.MaterialComponents.Body1.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/average_spacing"
            android:text="@string/end_date"
            android:textSize="@dimen/usual_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pickStartDate" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/endPeriodDateTextView"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/medium_spacing"
            android:background="@drawable/backdrop"
            android:ellipsize="end"
            android:gravity="center"
            android:hint="@string/get_date_from_calendar"
            android:textSize="@dimen/usual_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/pickEndDate"
            app:layout_constraintEnd_toStartOf="@+id/pickEndDate"
            app:layout_constraintStart_toStartOf="@id/beginPeriodDateTextView"
            app:layout_constraintTop_toTopOf="@+id/pickEndDate" />

        <ImageButton
            android:id="@+id/pickEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_spacing"
            android:backgroundTint="@color/widget_background_dark_color"
            android:textColor="@color/black"
            android:src="@drawable/ic_calendar"
            android:background="@color/transparent"
            app:iconTint="@color/black"
            android:contentDescription="@string/calendar_picker"
            android:padding="@dimen/small_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endDateLabelTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/multipleCoefficientLabelTextView"
            style="@style/TextAppearance.MaterialComponents.Body1.Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/average_spacing"
            android:text="@string/multiple"
            android:textSize="@dimen/usual_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pickEndDate" />

        <RadioGroup
            android:id="@+id/multiplySelectorRadioGroup"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/multipleCoefficientLabelTextView"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/x10multiplierRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x1"
                android:textSize="@dimen/first_header_text_size"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/x15multiplierRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_spacing"
                android:text="@string/x1_5"
                android:textSize="@dimen/first_header_text_size" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/x20multiplierRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_spacing"
                android:text="@string/x2"
                android:textSize="@dimen/first_header_text_size"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/x30multiplierRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_spacing"
                android:text="@string/x3"
                android:textSize="@dimen/first_header_text_size"/>
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/applyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/great_spacing"
            android:backgroundTint="@color/widget_background_dark_color"
            android:text="@string/apply"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/multiplySelectorRadioGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</ScrollView>
