<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/medium_spacing"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lengthOfServiceItemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1 years 2 mouths 3 days"
        android:textSize="@dimen/first_header_text_size"
        android:textColor="@color/dark_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/beginDateLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_date"
        android:textSize="@dimen/usual_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/beginPeriodDateTextView"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/beginPeriodDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="09.01.2013"
        android:layout_marginTop="@dimen/small_spacing"
        android:textSize="@dimen/usual_text_size"
        android:layout_marginStart="@dimen/small_spacing"
        app:layout_constraintStart_toEndOf="@id/beginDateLabelTextView"
        app:layout_constraintTop_toBottomOf="@id/lengthOfServiceItemTextView"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/endDateLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_date"
        android:textSize="@dimen/usual_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/endPeriodDateTextView"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/endPeriodDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="12.03.2014"
        android:layout_marginTop="@dimen/small_spacing"
        android:textSize="@dimen/usual_text_size"
        app:layout_constraintStart_toStartOf="@id/beginPeriodDateTextView"
        app:layout_constraintTop_toBottomOf="@id/beginPeriodDateTextView"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/multipleCoefficientLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiple"
        android:textSize="@dimen/usual_text_size"
        android:layout_marginEnd="@dimen/small_spacing"
        android:layout_marginTop="@dimen/small_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/endPeriodDateTextView"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/multipleCoefficientTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="x2"
        android:textSize="@dimen/usual_text_size"
        android:textColor="@color/dark_text"
        app:layout_constraintStart_toStartOf="@+id/beginPeriodDateTextView"
        app:layout_constraintTop_toTopOf="@id/multipleCoefficientLabelTextView"
        app:layout_constraintBottom_toBottomOf="@+id/multipleCoefficientLabelTextView"/>

    <View
        android:layout_width="0dp"
        android:layout_height="@dimen/border_width"
        android:background = "@color/widget_background_color"
        android:layout_marginTop="@dimen/small_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multipleCoefficientTextView"/>

</androidx.constraintlayout.widget.ConstraintLayout>